--- a/Formula_1_.html
+++ b/Formula_1_.html
@@ -43,6 +43,15 @@
             </figure>
         </section>
         <!-- Termina primer tema -->
+        <div> 
+            <span> Emiliano Núñez Pantoja </span> <a href="https://www.instagram.com/pantoja_emiliano/?hl=es-la" target="_blank">@pantoja_emiliano</a> 
+        </div>
+        <!-- Fin de los datos del autor -->
+        <!-- Bibliografía -->
+        <blockquote>
+            <p> Formula 1. (2022, 15 enero). Universidad Católica San Antonio de Murcia España. Recuperado 14 de enero de 2022, de https://www.redalyc.org/pdf/1630/163024659007.pdf </p>
+        </blockquote>
+        <!-- fin de la bibliograía -->
         <!-- Inicia segundo tema -->
         <section>
             <h3> ¿Cuando se fundo la Formula 1?</h3>
@@ -51,74 +60,56 @@
             </p>
         </section>
         <!-- Termina segundo tema -->
+        <div> 
+            <span> Emiliano Núñez Pantoja </span> <a href="https://www.instagram.com/pantoja_emiliano/?hl=es-la" target="_blank">@pantoja_emiliano</a> 
+        </div>
+        <!-- Fin de los datos del autor -->
+        <!-- Bibliografía -->
+        <blockquote>
+            <p> Formula 1. (2022, 15 enero). Universidad Católica San Antonio de Murcia España. Recuperado 14 de enero de 2022, de https://www.redalyc.org/pdf/1630/163024659007.pdf </p>
+        </blockquote>
+        <!-- fin de la bibliograía -->
         <!-- Inicia tercer tema -->
         <div>
             <h3><img src="images/coche-de-competicion.png" alt="bolido f1" height="35px" width="auto">Pilotos </h3>
             <p>
-                Cada escudería compite en carrera con dos pilotos, y disponen de otros tantos probadores, aunque todas cuentan con una multitud de ingenieros, 
-                que realizan un trabajo casi tan importante como el de los pilotos:
+                Cada escudería compite en carrera con dos pilotos, y disponen de otros tantos probadores, aunque todas cuentan con una multitud de ingenieros, que realizan un trabajo casi tan importante como el de los pilotos.
+                 <label> Los mejores pilotos : </label>
                 <!-- Inicia lista de pilotos-->
                 <li>
-                    Mercedes-AMG Petronas: Lewis Hamilton y Valtteri Bottas
+                    <span>Mercedes-AMG Petronas</span>: Lewis Hamilton y Valtteri Bottas<meter value="100" min="0" max="100"></meter>
                 </li>
                 <li>
-                    Red Bull Racing Honda:  Sergio Pérez y Max Verstappen
+                    <span>Red Bull Racing</span>  Sergio Pérez y Max Verstappen<meter value="100" min="0" max="100"></meter>
                 </li>
                 <li>
-                    McLaren F1 Team: Daniel Ricciardo y Lando Norris
+                    <span>McLaren F1 Team:</span> Daniel Ricciardo y Lando Norris<meter value="70" min="0" max="100"></meter>
                 </li>
                 <li>
-                    Aston Martin Cognizant: Sebastian Vettel y Lance Stroll
+                    <span>Aston Martin Cognizant:</span>: Sebastian Vettel y Lance Stroll<meter value="80" max="100" min="0"></meter>
                 </li>
                 <li>
-                    Alpine F1 Team: Fernando Alonso y Esteban Ocon
+                    <span>Alpine F1 Team:</span> Fernando Alonso y Esteban Ocon <meter value="50" min="0" max="100"></meter>
                 </li>
                 <li>
-                    Scuderia Ferrari Mission Winnow: Charles Leclerc y Carlos Sainz Jr.
+                    <span>Scuderia Ferrari</span> Mission Winnow: Charles Leclerc y Carlos Sainz Jr.<meter value="85" min="0" max="100"></meter>
                 </li>
                 <li>
-                    AlphaTauri Honda: Pierre Gasly y Yuki Tsunoda 
+                    <span>AlphaTauri Honda</span> Pierre Gasly y Yuki Tsunoda <meter value="40" min="0" max="100"></meter>
                 </li>
                 <li>
-                    Alfa Romeo Racing: Kimi Räikkönen y Antonio Giovinazzi
+                   <span> Alfa Romeo Racing:</span> Kimi Räikkönen y Antonio Giovinazzi <meter value="60" min="0" max="100"></meter>
                 </li>
                 <li>
-                    Haas F1 Team:  Nikita Mazepinn y Mick Schumacher
+                    <span>Haas F1 Team:</span> Nikita Mazepinn y Mick Schumacher<meter value="20" min="0" max="100"></meter>
                 </li>
                 <li>
-                    Williams Racing: Nicholas Latifi y George Russell
+                    <span>Williams Racing:</span> Nicholas Latifi y George Russell<meter value="10" min="0" max="100"></meter>
                 </li>
                 <!-- Termina lista de pilotos -->
             </p>
         </div>
         <!-- Termina tercer tema -->
-        <!-- Inicia cuarto tema -->
-        <section>
-            <h3> ¿Como se corre el gran premio de Formula 1?</h3>
-            <p>
-                Cada fin de semana la GP <strong>(Gran Premio)</strong> divide en tres partes. Los viernes a primera hora se realiza la prueba en donde checan si los automoviles no cuentan con ningun tipo de problemas, y para los pilotos hagan un reconocimiento de la pista. En el segundo día <strong>(Sabado)</strong> se realiza la clasificación, en donde los corredores lo mas rapido posible, el piloto con el tiempo recorrido mas corto sera el primero en salir de la parrilla y así sucesivamente.El tercer día <strong>(domingo)</strong> se juega la carrera. 
-            </p>
-        </section>
-        <!-- Termina tercer tema -->
-        <nav>
-            <ol>
-                <!-- investigación del tema -->
-                <li>
-                    <a href="Investigación2e.html"> Investigación de la Formula 1 </a>
-                </li>
-            </ol>
-        </nav>
-        <!-- fuentes de información -->
-        <nav>
-            <ol>
-               <li>
-                   <a href="https://www.redalyc.org/pdf/1630/163024659007.pdf">Gran premio GP </a>
-               </li>
-               <li>
-                   <a href="https://www.netflix.com/watch/80239920?trackId=13752289"> Serie de Netflix</a>
-               </li>
-            </ol>
-        </nav>
         <!-- Datos del autor -->
         <div> 
             <span> Emiliano Núñez Pantoja </span> <a href="https://www.instagram.com/pantoja_emiliano/?hl=es-la" target="_blank">@pantoja_emiliano</a> 
@@ -126,10 +117,38 @@
         <!-- Fin de los datos del autor -->
         <!-- Bibliografía -->
         <blockquote>
-            <p> Cita correctamente hecha </p>
+            <p> Pilotos de la F1. (s. f.). los pilotos de la F1. Recuperado 14 de enero de 2022, de https://formula1.lne.es/pilotos-f1/ </p>
         </blockquote>
         <!-- fin de la bibliograía -->
-        
+        <!-- Inicia cuarto tema -->
+        <section>
+            <h3> ¿Como se corre el gran premio de Formula 1?</h3>
+            <p>
+                Cada fin de semana la GP <strong>(Gran Premio)</strong> divide en tres partes. Los viernes a primera hora se realiza la prueba en donde checan si los automoviles no cuentan con ningun tipo de problemas, y para los pilotos hagan un reconocimiento de la pista. En el segundo día <strong>(Sabado)</strong> se realiza la clasificación, en donde los corredores lo mas rapido posible, el piloto con el tiempo recorrido mas corto sera el primero en salir de la parrilla y así sucesivamente.El tercer día <strong>(domingo)</strong> se juega la carrera. 
+            </p>
+        </section>
+        <!-- Termina cuarto tema  -->
+       <!-- Investigación de F1 --> 
+       <div>
+            <!-- Inicia la investigación -->
+            <h3><img src="images/conductor.png" alt="bolido f1" height="35px" width="auto"> Investigación de F1 2022 </h3>
+            <p>
+                Desde el alto mando de Williams querían que Latifi dejara de pensar demasiado y se confundiera más con sus instintos de piloto. Como dijo Dave Robson, los demás en la parrilla deberían hacer lo mismo, y en Williams creen en su talento, pero quieren que 2022 sea el año en que se demuestre. Quieren mejores autos y nuevos socios para poner en práctica sus habilidades, y parece que sus opciones u oportunidades comienzan a agotarse porque dice que cree que todavía es posible. Veremos de lo que es capaz el canadiense y si eso ayuda o es lo que Williams quiere ver.
+            </p>
+            <p>
+                "Creo que este año fue un poco más alto y más bajo de lo que esperábamos. Como equipo con Nicky, oscilamos entre la calificación y el ritmo de la carrera, pero todavía tiene mucho talento para conducir el auto, entender y articular problemas". Obviamente, el próximo año será un reinicio masivo. El auto es completamente diferente y también lo es el nuevo compañero de equipo, así que creo que el próximo año tiene la oportunidad de brillar realmente. Creo que todavía tengo la oportunidad de hacerlo".
+            </p>
+       </div>
+        <!-- Datos del autor -->
+        <div> 
+            <span> Emiliano Núñez Pantoja </span> <a href="https://www.instagram.com/pantoja_emiliano/?hl=es-la" target="_blank">@pantoja_emiliano</a> 
+        </div>
+        <!-- Fin de los datos del autor -->
+        <!-- Bibliografía -->
+        <blockquote>
+            <p> Netflix. (s. f.). Serie de Formula 1. Drive to survive. Recuperado 14 de enero de 2022, de https://www.netflix.com/watch/80239920?trackId=13752289 </p>
+        </blockquote>
+        <!-- fin de la bibliograía -->
     </body>
     <!-- Termina mi blog -->
 </html>
