--- a/Formula_1_.html
+++ b/Formula_1_.html
@@ -139,7 +139,8 @@
                 "Creo que este año fue un poco más alto y más bajo de lo que esperábamos. Como equipo con Nicky, oscilamos entre la calificación y el ritmo de la carrera, pero todavía tiene mucho talento para conducir el auto, entender y articular problemas". Obviamente, el próximo año será un reinicio masivo. El auto es completamente diferente y también lo es el nuevo compañero de equipo, así que creo que el próximo año tiene la oportunidad de brillar realmente. Creo que todavía tengo la oportunidad de hacerlo".
             </p>
        </div>
-        <!-- Datos del autor -->
+        <footer>
+            <!-- Datos del autor -->
         <div> 
             <span> Emiliano Núñez Pantoja </span> <a href="https://www.instagram.com/pantoja_emiliano/?hl=es-la" target="_blank">@pantoja_emiliano</a> 
         </div>
@@ -149,6 +150,7 @@
             <p> Netflix. (s. f.). Serie de Formula 1. Drive to survive. Recuperado 14 de enero de 2022, de https://www.netflix.com/watch/80239920?trackId=13752289 </p>
         </blockquote>
         <!-- fin de la bibliograía -->
+        </footer>
     </body>
     <!-- Termina mi blog -->
 </html>
