--- a/reglamento.html
+++ b/reglamento.html
@@ -140,18 +140,14 @@
                 </p>
             </section>
         </div>
-        <!-- Datos del autor -->
-        <div> 
+        <footer>
+            <!--bibliografía  -->
             <span> Emiliano Núñez Pantoja </span> <a href="https://www.instagram.com/pantoja_emiliano/?hl=es-la" target="_blank">@pantoja_emiliano </a>
-        </div>
-        <!-- Fin de los datos del autor -->
-        <!-- Bibliografía -->
+            <!-- Bibliografía -->
         <blockquote>
             <p> FIA en Formula 1. (s. f.). Formula 1. https://www.fia.com/</p>
         </blockquote>
         <!-- fin de la bibliograía -->
-        <footer>
-            <a href="https://www.redbull.com/pe-es/redbullracing/bulls-guide-la-seguridad-operativa-en-la-formula-1">Guia de seguridad</a>
         </footer>
     </body>
 </html>
