--- a/eval.html
+++ b/eval.html
@@ -78,7 +78,7 @@ PAE 3: 8.5
     Criterio del
     Profesor:            0 pts de 1
 
-    comentarios: Tienen trabajo muy dispar no me queda máss remedio que calificar diferente porque ssi no afectaría mucho a Johan. 
+    comentarios: Tienen trabajo muy dispar no me queda máss remedio que calificar diferente porque si no afectaría mucho a Johan. 
     Emiliano: tienes los videos, pero tus entradas no están integradas a un blog, te di las repsuestas a los PAEs anteriores en el checkpoint pero aún así no completasste el blog. Tu calificación es 6. 
     Johan: Tienes un blog completo y casi perfecto, pero no hay coresponsabilidad con tu compañero. Esto no es un equipo. Tu calificación es 8. 
 ------------------------------------------------->
@@ -108,3 +108,24 @@ PAE 3: 8.5
 <!------------------------------------------------->
 
 <!-- 13 ene | @sergiortellez: Por favor pidan una reunión conmigo.  -->
+
+<!-- 14 ene | @sergiortellez: Se volvió a revisar el Pae 4 y 5:
+ * El trabajo mejoró, pero la investigación es muy pobre en dos de sus blogs. No la hicieron con calma y tiempo. 
+ 
+ * La barra de navegación es un desastre en el pae donde se hace la nav se aclara que los links son : 
+    - al index
+    - al tema 1 del alumno 0
+    - al tema 2 del alumno 0
+     - al tema 1 del alumno 1
+    - al tema 2 del alumno 1
+
+* Algunos blogs están incompletos no tienen todas las entradas desde el PAE 1. En concreto el blog de 'reglamento' y el de 'formula_uno_emiliano' están incompletos
+
+Por favor arreglen todo esto para el siguiente PAE. 
+
+
+Nueva Calificación PAE 4: 9
+Nueva Calificación PAE 5: 8
+    
+
+--> 
