--- a/formula_uno_emiliano.html
+++ b/formula_uno_emiliano.html
@@ -4,7 +4,7 @@
     <head>
         <!-- Tema propuesto para el blog -->
         <title> Formula 1 </title>
-        <link rel="stylesheet" href="styles/formula_uno_emiliano.html">
+        <link rel="stylesheet" href="styles/estilos_emiliano.css">
     </head>
     <body>
         <!-- Tema -->
