--- a/index.html
+++ b/index.html
@@ -1,18 +1,28 @@
 <!--Nuñez Pantoja Emiliano, Pineda Ayala Johan Mauricio -->
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <title>BLOG DEL MUNDO </title>
-</head>
-    <meta charset="UTF-8">
-
-<body>
-    <!-- ---- @sergiortellez | 3 nov ----  --
-            esta información debería estar en propuestas.html    
-        --  Penalización: 0.5 -> seguimiento de instrucciones -->
- Bienvenido al mejor blog.
- Enterate de lo nuevo de la formula 1 y el skate.
-    
-</body>
-
+    <head>
+        <!-- tema principal -->
+        <meta charset="UTF-8">
+        <title> El blog del mundo </title>
+    </head>
+    <body>
+        <header>
+            <!-- tema 1 -->
+            <h1> Titulo Grande </h1>
+            <h2> subtitulo </h2>
+        </header>
+        <div>
+            <!-- primer parrafo  -->
+            <p>
+                texto de del blog del mundo 
+            </p>
+            <!-- termina primer parrafo -->
+        </div>
+        <section>
+           <p>
+               F1 
+           </p>
+        </section>
+    </body>
 </html>
