--- a/formula_uno_emiliano.html
+++ b/formula_uno_emiliano.html
@@ -8,9 +8,11 @@
     </head>
     <body>
         <!-- Tema -->
-        <header>
-            <h1><img src="images/Logo.png" alt="bolido f1" height="35px" width="auto"> Formula 1 </h1>
-        </header>
+        <section>
+            <header>
+                <h1 class="titulo_del_blog1"><img src="images/Logo.png" alt="bolido f1" height="35px" width="auto"> Formula 1 </h1>
+            </header>
+        </section>
         <!-- Empieza barra de navegaciones -->
         <aside>
             <nav>
@@ -28,6 +30,7 @@
                     <li>
                         <a href="https://www.fia.com/"> FIA </a>
                     </li>
+                    <li><a class="resultado" href="index.html" target="_blank">Principal</a></li>
                 </ul>  
               </nav> 
         </aside>
