--- a/reglamento.html
+++ b/reglamento.html
@@ -22,6 +22,7 @@
                 <li>
                     <a href="https://www.fia.com/"> FIA </a>
                 </li>
+                <li><a class="resultado" href="index.html" target="_blank">Principal</a></li>
             </ul>
         </nav>
         <!-- termina barra de navegaciones -->
