--- a/formula_uno_johan.html
+++ b/formula_uno_johan.html
@@ -6,6 +6,7 @@
     <!--carga los caracteres latinos -->
     <meta charset="UTF-8">
     <title> F1 </title>
+    <link rel="stylesheet" href="styles/estilos_johan.css">
   </head>
     
   <!--empieza mi blog-->
@@ -14,7 +15,7 @@
     <nav>
       <ul>
         <li> <!-- enlace a el Inicio (archivo index) * "_blank" abre una pestaña nueva*-->
-          <a href="index.html" target="_blank">Inicio</a>
+          <a class="resaltado" href= "index.html" target="_blank">Inicio</a>
         </li>
            
         <li>
@@ -34,8 +35,8 @@
     <!-- termina barra de navegación -->
     <section>
       <!-- Empieza titulo de mi blog -->
-      <header>
-        <h1>La agonía en las ultimas carreras</h1>  
+      <header id="titulo_del_blog">
+        <h1>  La agonía en las ultimas carreras</h1>  
       </header>
       <!-- Termina el titulo de mi blog -->
    
