--- a/skate_blog.html
+++ b/skate_blog.html
@@ -6,6 +6,7 @@
     <!--carga los caracteres latinos -->
     <meta charset="UTF-8">
     <title>skate</title>
+    <link rel="stylesheet" href="styles/estilos_johan.css">
 </head>
 <!--empieza mi blog-->
 
@@ -14,7 +15,7 @@
     <nav>
         <ul>
           <li> <!-- enlace a el Inicio (archivo index) * "_blank" abre una pestaña nueva*-->
-              <a href="index.html" target="_blank">Inicio</a>
+              <a class="resaltado" href="index.html" target="_blank">Inicio</a>
           </li>
          
           <li>
@@ -35,7 +36,7 @@
     <section>
         <!-- 23 nov | @sergiortellez: excelente estructura de blog  -->
         <!-- Empieza titulo de mi blog -->
-        <header>
+        <header id="titulo_del_blog">
             <h1>La magia del skate </h1>
         </header>
         <!-- Termina el titulo de mi blog -->
