PAE 6 full acabado

--- a/formula_uno_johan.html
+++ b/formula_uno_johan.html
@@ -238,11 +238,13 @@
          <!--inicia contenido del articulo -->
           <div>
            <figure>
-             <iframe width="560" height="300" 
-              src="https://youtu.be/R_5pAVbwCIw" 
-              title="YouTube video player" frameborder="0" 
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              <figcaption>Resumen del GP de Brasil</figcaption>
+            <iframe 
+            width="560" height="315" 
+            src="https://www.youtube.com/embed/R_5pAVbwCIw" 
+            title="YouTube video player" frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen></iframe>
+            <figcaption>Resumen del GP de Brasil</figcaption>
             </figure>
             <h4>Es un video donde se resume lo que paso en el fin de semana en el GP de Brasil, ademas se hace un analisisi de lo mas importante y las estrategia de las escuderias</h4>
             <h4>Es un video muy bueno, en lo personal es un contenido sano, e informativo, es un contenido que suelo consumir por la buena forma de narrar los hechos</h4>
@@ -447,12 +449,17 @@
           <!-- inicia contenido del artículo -->
           <div>
               <h3>Nuevos combustibles</h3>
-              <p>Ejemplo de contenido</p>
+              <p>Explicación de los nuevos combustibles en la Formula uno</p>
       
               <!-- inicia ilustración del artículo -->
               <figure>
-                  <img src="assets/images/ilustracion_1.jpg" alt="ilustracion 1º artículo" height="600px" width="auto">
-                  <figcaption>Texto de descripción de mi ilustración.</figcaption>
+                  <iframe width="560" height="315" 
+                    src="https://www.youtube.com/embed/d0slQ3R2-rs" 
+                    title="YouTube video player" frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                    allowfullscreen>
+                  </iframe>
+                  <figcaption>Nuevos combustibles en Fórmula 1</figcaption>
               </figure>
               <!-- termina ilustración del artículo -->
       
@@ -467,7 +474,8 @@
               <!-- fin datos del autor -->
               <!-- bibliografía -->
               <blockquote>
-                  <p>Cita correctamente hecha.</p>
+                  <p>Ayala, J. M. P. (2022, 3 febrero). Nuevos combustibles en la Fórmula 1 [Vídeo]. YouTube. 
+                    https://www.youtube.com/watch?v=d0slQ3R2-rs&feature=youtu.be</p>
               </blockquote>
               <!-- fin bibliografía -->
           </footer>
