--- a/reglamento.html
+++ b/reglamento.html
@@ -34,7 +34,7 @@
                 son los encargados en hacer que se respetan las reglas de la Formula 1, ellos son los que les ponen una sanción a los pilotos 
                 cuando incumplen una regla.
             </p>
-            <figure>
+            <figure class="ilustracion">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/0nsYGnDFdes" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <figcaption> Resmumen basico de la "FIA"</figcaption>
             </figure>
@@ -97,7 +97,7 @@
                 Finalmente, el 19 de julio de 2017, el ente federativo decidió optar por el Halo para reforzar la seguridad de los pilotos de 
                 monoplazas y anunció que los F1 lo llevarían ya de manera obligatoria la siguiente temporada.
             </p>
-            <figure>
+            <figure class="ilustracion">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/w1AXuNDa4qE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <figcaption>Evolución de la seguirdad de la Fomrula 1</figcaption>
             </figure>
@@ -141,14 +141,14 @@
                 </p>
             </section>
         </div>
-        <footer>
+        <footer id="footer_blog">
             <!--bibliografía  -->
             <span> Emiliano Núñez Pantoja </span> <a href="https://www.instagram.com/pantoja_emiliano/?hl=es-la" target="_blank">@pantoja_emiliano </a>
             <!-- Bibliografía -->
-        <blockquote>
+          <blockquote>
             <p> FIA en Formula 1. (s. f.). Formula 1. https://www.fia.com/</p>
-        </blockquote>
-        <!-- fin de la bibliograía -->
+          </blockquote>
+          <!-- fin de la bibliograía -->
         </footer>
     </body>
 </html>
