--- a/formula_uno_emiliano.html
+++ b/formula_uno_emiliano.html
@@ -15,7 +15,9 @@
         </section>
         <!-- Empieza barra de navegaciones -->
         <aside>
+            <h2> Microbloging </h2>
             <nav>
+                <!-- entrada del microbloging-->
                 <ul>
                     <!--Reglamento de la Formula 1 -->
                     <li><a class="resultado" href="index.html" target="_blank">Principal</a></li>
@@ -32,9 +34,42 @@
                         <a href="https://www.fia.com/"> FIA </a>
                     </li>
                 </ul>  
+                <!-- salida del microbling -->
               </nav> 
         </aside>
         <!-- Termina barra de navegaciones --> 
+        <!-- Empieza barra lateral -->
+        <aside>
+            <h2>Microblogging</h2>
+            <!-- Empieza primera entrada -->
+            <div>
+                <span> La formula 1 es una de las carreras mas importantes en el mundo del automovilismo, en donde solo pueden estar los mejores pilotos del mundo. </span>
+            </div>
+            <!-- Termina entrada -->
+            <!-- Empieza entrada -->
+            <div>
+                <span>la F1 es uno de los deportes mas caros en el mundo, porque se necesitan millones de dolares para solo poder construir un carro de F1. </span>
+            </div>
+            <!-- Termina entrada -->
+            <!-- Empieza entrada -->
+            <div>
+                <span>La Fomrula 1 cuenta con 10 escuderias, en donde cada escuderia tiene 2 pilotos, las escuderias mas grandes de la F1 es Mercedes, Red Bull, maclaren y ferrari.</span>
+            </div>
+            <!-- Termina entrada -->
+            <!-- Empieza entrada -->
+            <div>
+                <span> Las escuderias mas grandes de la F1 hablando de campeonatos son Mercedes y Red Bull en donde compiten para ver que escuderia es mejor. </span>
+            </div>
+            <!-- Termina entrada -->
+            <!-- Empieza entrada -->
+            <div>
+                <span> La F1 tiene campeonatos al en todo en mundo, en donde se destacan paises de primer mundo, en donde se destacan las pistas de dubai, budapest y México </span>
+            </div>
+        </aside>
+        <!-- Termina entrada -->
+        <!-- Empieza entrada -->
+
+        <!-- Termina barra lateral -->
         <!-- Inicia primer tema -->
         <section>
             <h3><img src="images/conductor.png" alt="bolido f1" height="35px" width="auto">¿Como es la Formula 1? </h3>
