--- a/reglamento.html
+++ b/reglamento.html
@@ -26,6 +26,26 @@
             </ul>
         </nav>
         <!-- termina barra de navegaciones -->
+        <!-- Empieza barra lateral -->
+        <aside>
+            <h2>Microblogging</h2>
+            <!-- Empieza primera entrada -->
+            <div>
+                <span>Las reglas de la Formula 1 son basadas y guiadas por la FIA,que ellos deciden las sanciones que puedd¿udieran tener los pilotos </span>
+            </div>
+            <!-- Termina entrada -->
+            <!-- Empieza entrada -->
+            <div>
+                <span> Los pilotos o la escuderia podría ser sansionada por revisar la el automovil de la otra escuderia porque podría ser copiada para el siguente auto del siguiente año. </span>
+            </div>
+            <!-- Termina entrada -->
+            <!-- Empieza entrada -->
+            <div>
+                <span> Las multas que se le aplican a los pilotos de F1 pueden ser desde monetarias, hasta quitarte segundos en la carrera </span>
+            </div>
+            <!-- Termina entrada -->
+        </aside>
+        <!-- Termina entrada -->
         <!-- Inica primer tema -->
         <section>
             <h3><img src="images/trofeo.png" alt="bolido f1" height="35px" width="auto"> ¿Que es la FIA? </h3>
