@eval: se agregaron evaluaciones de los PAES 6, 7, 8 y 9

--- a/eval.html
+++ b/eval.html
@@ -128,4 +128,76 @@ Nueva Calificación PAE 4: 9
 Nueva Calificación PAE 5: 8
     
 
---> 
+-->
+
+<!------------------------------------------------->
+<!-- Evaluación PAE-6 (a tiempo) 12 mayo-->
+<!-------------------------------------------------
+    Código:              3 pts de 3 
+    Contenido:           3 pts de 3
+
+    Seguimiento 
+    de instrucciones:    1.5 pts de 1.5
+    Orden:               1.5 pts de 1.5
+
+    Corrección 
+    de errores:          1 pts de 1
+    Criterio del
+    Profesor:            1 pts de 1
+
+    comentarios: Excelente trabajo, gracias por dejarme verlos y escucharlos en sus vídeos de youtube. Hace falta en estos tiempos de clases en línea. 
+------------------------------------------------->
+<!-- Calificación: 11 pts de 11   -->
+<!------------------------------------------------->
+
+<!------------------------------------------------->
+<!-- Evaluación PAE-7 (a tiempo) 12 mayo-->
+<!-------------------------------------------------
+    Código:              3 pts de 3 
+    Contenido:           3 pts de 3
+
+    Seguimiento 
+    de instrucciones:    1.5 pts de 1.5
+    Orden:               1.5 pts de 1.5
+
+    Corrección 
+    de errores:          1 pts de 1
+    Criterio del
+    Profesor:            1 pts de 1
+
+    comentarios: Buen trabajo, me da gusto que estén disfrutando hacer este blog. 
+------------------------------------------------->
+<!-- Calificación: 11 pts de 11   -->
+<!------------------------------------------------->
+
+<!------------------------------------------------->
+<!-- Evaluación PAE-8 (a tiempo) 12 mayo-->
+<!-------------------------------------------------
+    Código:              3 pts de 3 
+    Contenido:           3 pts de 3
+
+    Seguimiento 
+    de instrucciones:    1.5 pts de 1.5
+    Orden:               1.5 pts de 1.5
+
+    Corrección 
+    de errores:          1 pts de 1
+    Criterio del
+    Profesor:            1 pts de 1
+
+    comentarios: Era un PAE complejo y lo resolvieron muy bien.
+    Johan:  gracias por incluirme en tu meme lol. 
+------------------------------------------------->
+<!-- Calificación: 11 pts de 11   -->
+<!------------------------------------------------->
+
+<!------------------------------------------------->
+<!-- Evaluación PAE-8 (Fuera de tiempo) 12 mayo-->
+<!-------------------------------------------------
+Código:              0 pts de 4 
+Contenido:           2 pts de 2
+
+Comentarios: ¿Qué pasó? ¿Por qué no resolvieron el PAE de Flexbox? Es necesario que se pongan al corriente, iban perfecto. 
+------------------------------------------------->
+<!-- Calificación: 2 pts de 6       -->
+<!------------------------------------------------->
