--- a/formula_uno_emiliano.html
+++ b/formula_uno_emiliano.html
@@ -1,5 +1,4 @@
-<!-- 23 nov | @sergiortellez: trabajo incompleto  --> 
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="es">
     <head>
         <!-- Tema propuesto para el blog -->
@@ -211,8 +210,7 @@
                 Es la técnica de lanzamiento de seres humanos desde cierta altura y se usa un paracaídas que amortigua el aterrizaje.La edad mínima para hacer el salto es de 7 años. Por supuesto, los menores de edad podrán saltar en paracaídas con la autorización por escrito de sus representantes legales en nuestros formularios. El peso límite para saltar es de 105 kilos (incluyendo calzado y vestido).
                </p>
                <figure class="ilustracion">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/4Tyg7umXkjM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-               </figure>
+               <iframe width="560" height="315" src="https://www.youtube.com/embed/ZZ9w0LRxTc4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                <!-- inicia el footer -->
                <footer>
                    <!-- datos del autor -->
