--- a/formula_uno_emiliano.html
+++ b/formula_uno_emiliano.html
@@ -3,7 +3,9 @@
     <head>
         <!-- Tema propuesto para el blog -->
         <title> Formula 1 </title>
+        <!-- Carga hoja de estilos -->
         <link rel="stylesheet" href="styles/estilos_emiliano.css">
+        <!-- Termina carga de hoja de estilos -->
     </head>
     <body>
         <!-- Tema -->
@@ -22,7 +24,7 @@
                     </li>
                     <!-- Cosas interesantes de la formula 1 -->
                     <li>
-                        <a href="formula_1.html"> Hagonia de las ultimas carreras </a>
+                        <a href="formula_uno_johan.html"> Hagonia de las ultimas carreras </a>
                     </li>
                     <!-- Enlace a la pagina oficial de la Fia -->
                     <!-- Fia es la que organiza todas las reglas dentro de la fotmula 1 -->
@@ -67,7 +69,7 @@
 
         <!-- Termina barra lateral -->
         <!-- Inicia primer tema -->
-        <section>
+        <div>
             <h3><img src="images/conductor.png" alt="bolido f1" height="35px" width="auto">¿Como es la Formula 1? </h3>
             <p>
                 La "Formula 1" es una de las competencias mas importantes en el mundo del automovilismo, en donde compiten los mejores corredores del mundo, en donde participan 10 escuderias, cada escuderia cuenta con dos pilotos. El campeonato de Fórmula 1 comenzó en 1950 y ha evolucionado al grado de ser uno de los pocos deportes que se practica en más de 20 ciudades alrededor del mundo.
@@ -76,7 +78,7 @@
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/T3LOaEd0GsI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <figcaption> Resumen mas explicado </figcaption>
             </figure>
-        </section>
+        </div>
         <!-- Termina primer tema -->
         <div> 
             <span> Emiliano Núñez Pantoja </span> <a href="https://www.instagram.com/pantoja_emiliano/?hl=es-la" target="_blank">@pantoja_emiliano</a> 
@@ -88,12 +90,13 @@
         </blockquote>
         <!-- fin de la bibliograía -->
         <!-- Inicia segundo tema -->
-        <section>
+        <div>
             <h3> ¿Cuando se fundo la Formula 1?</h3>
             <p>
                 La Formula 1 <strong>inicio en el año de 1950</strong> en el que participaron las escuderias: <strong>Ferrari, Alfa Romeo y Maserati.</strong> Algunas fueron reemplazadas por otras nuevas como McLaren, Williams, Red Bull y otras que volvieron como Mercedes que se han alzado varias veces con el Campeonato Mundial de Constructores.
             </p>
-        </section>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/h1j6bRhrf8c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
         <!-- Termina segundo tema -->
         <div> 
             <span> Emiliano Núñez Pantoja </span> <a href="https://www.instagram.com/pantoja_emiliano/?hl=es-la" target="_blank">@pantoja_emiliano</a> 
@@ -156,12 +159,13 @@
         </blockquote>
         <!-- fin de la bibliograía -->
         <!-- Inicia cuarto tema -->
-        <section>
+        <div>
             <h3> ¿Como se corre el gran premio de Formula 1?</h3>
             <p>
                 Cada fin de semana la GP <strong>(Gran Premio)</strong> divide en tres partes. Los viernes a primera hora se realiza la prueba en donde checan si los automoviles no cuentan con ningun tipo de problemas, y para los pilotos hagan un reconocimiento de la pista. En el segundo día <strong>(Sabado)</strong> se realiza la clasificación, en donde los corredores lo mas rapido posible, el piloto con el tiempo recorrido mas corto sera el primero en salir de la parrilla y así sucesivamente.El tercer día <strong>(domingo)</strong> se juega la carrera. 
             </p>
-        </section>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/T3LOaEd0GsI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
         <!-- Termina cuarto tema  -->
        <!-- Investigación de F1 --> 
        <div>
