--- a/reglamento.html
+++ b/reglamento.html
@@ -4,6 +4,9 @@
     <head>
         <!-- Tema principal -->
         <title> Reglamento y seguridad de la Formula 1 </title>
+        <!-- Carga dla hoja de estilos -->
+        <link rel="stylesheet" href="styles/estilos_emiliano.css">
+        <!-- Termina hoja de estilos -->
     </head>
     <body>
         <!-- Tema  -->
@@ -11,11 +14,10 @@
             <h1><img src="images/formula.png" alt="bolido f1" height="35px" width="auto"> Reglamento y seguridad de la Formula 1 </h1>
         </section>
         <!-- barra de navegaciones -->
-        <nav>
+        <nav>   
             <ul>
-                <li><a class="resultado" href="index.html" target="_blank">Principal</a></li>
                 <li>
-                    <a href="Formula_1_.html"> Inicio </a>
+                    <a href="formula_uno_emiliano.html"> Inicio </a>
                 </li>
                 <li>
                     <a href="https://www.formula1.com/">Pagina official de la F1</a>
@@ -47,7 +49,7 @@
         </aside>
         <!-- Termina entrada -->
         <!-- Inica primer tema -->
-        <section>
+        <side>
             <h3><img src="images/trofeo.png" alt="bolido f1" height="35px" width="auto"> ¿Que es la FIA? </h3>
             <p>
                 La Federación Internacional del Automóvil (FIA) es uno de los rectores del deporte del automovilismo mas importantes, la FIA
@@ -58,7 +60,7 @@
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/0nsYGnDFdes" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <figcaption> Resmumen basico de la "FIA"</figcaption>
             </figure>
-        </section>
+        </side>
         <!-- Termina primer tema -->
         <!-- Datos del autor -->
         <div> 
@@ -71,7 +73,7 @@
         </blockquote>
         <!-- fin de la bibliograía -->
         <!-- Inicia segundo tema -->
-        <section>
+        <div>
             <h3> Historia de la FIA </h3>
             <p>
                 En 1922, la FIA delegó la organización de carreras de automóviles a la Commission Sportive International (CSI), un comité 
@@ -79,7 +81,7 @@
                 Europeo de Pilotos en 1931, 1932 y entre 1935 y 1939, agrupando algunos de los Grandes Épreuves (Grandes Eventos, es decir, los 
                 Grandes Premios considerados más importantes por la AIACR).
             </p>
-        </section>
+        </div>
         <!-- Termina segundo tema -->
         <!-- Datos del autor -->
         <div> 
@@ -92,13 +94,13 @@
         </blockquote>
         <!-- fin de la bibliograía -->
         <!-- Inicia tercer tema -->
-        <section>
+        <div>
             <h3> Halo de la F1 </h3>
             <p>
                 La "HALO" es un metodo de seguridad para que tivieran mas seguridad los pilotos de la Formula 1, su función es en caso de un choque 
                 el halo  pueda proteger la cabeza del piloto y tenga menos posibilidad de fallecer en el accidente.
             </p>
-        </section>
+        </div>
         <!-- Termina tercer tema -->
         <!-- Datos del autor -->
         <div> 
@@ -111,7 +113,7 @@
         </blockquote>
         <!-- fin de la bibliograía -->
         <!-- Inicia cuarto tema -->
-        <section>
+        <div>
             <h3><img src="images/llave-de-torsion.png" alt="bolido f1" height="35px" width="auto"> ¿Cuando implementaron el "HALO"? </h3>
             <p>
                 Finalmente, el 19 de julio de 2017, el ente federativo decidió optar por el Halo para reforzar la seguridad de los pilotos de 
@@ -121,7 +123,7 @@
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/w1AXuNDa4qE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <figcaption>Evolución de la seguirdad de la Fomrula 1</figcaption>
             </figure>
-        </section>
+        </div>
         <!-- Termina cuarto tema -->
         <!-- Datos del autor -->
         <div> 
@@ -137,7 +139,7 @@
         <h3><img src="images/trofeo.png" alt="bolido f1" height="35px" width="auto"> Investigación del reglamento  </h3>
         <div>
             <h3><img src="images/trofeo.png" alt="bolido f1" height="35px" width="auto"> Investigación del reglamento  </h3>
-            <section>
+            <adside>
                 <p>
                     En la Fomrula 1 hay una organización que maneja el reglamento de de las carreras que es la <strong>FIA</strong><strong>(Federación Internacional del Automóvil)</strong>, y que se dedica a verificar que en las carreras no se cometa ningun tipo de infracción, y tambien implementa las sansiones que pueden ser: 
                     <ol>
@@ -159,7 +161,7 @@
                     La <strong> FIA </strong> tambien se encarga de que que los autos de F1 cumplan con las medidas indicadas en el reglamento, porque si no tiene las medidas o tiene un objeto que pueda que le de ventaja al auto de F1 sera penalizado con una multa económica y tendran que quitar lo que hace que le de ventaja en el automovil 
                     <!-- termina el parrafo -->
                 </p>
-            </section>
+            </adside>
         </div>
         <footer id="footer_blog">
             <!--bibliografía  -->
