--- a/reglamento.html
+++ b/reglamento.html
@@ -9,10 +9,6 @@
         <!-- Termina hoja de estilos -->
     </head>
     <body>
-        <!-- Tema  -->
-        <section>
-            <h1><img src="images/formula.png" alt="bolido f1" height="35px" width="auto"> Reglamento y seguridad de la Formula 1 </h1>
-        </section>
         <!-- barra de navegaciones -->
         <nav>   
             <ul>
@@ -28,6 +24,10 @@
             </ul>
         </nav>
         <!-- termina barra de navegaciones -->
+        <!-- Tema  -->
+        <div>
+            <h1><img src="images/formula.png" alt="bolido f1" height="35px" width="auto"> Reglamento y seguridad de la Formula 1 </h1>
+        </div>
         <!-- Empieza barra lateral -->
         <aside>
             <h2>Microblogging</h2>
